# VMeta

./: CMakeLists.txt  CMakeSettings.json  README.md
include/VMeta/: operation.hpp  staticdict.hpp
test/: CMakeLists.txt  test_operation.cpp  test_staticdict.cpp
